# emulateurChip8

./: CMakeLists.txt  README.md  main.c
cpu/include/: cpu.h  test.h
cpu/src/: CMakeLists.txt  cpu.c  test.c
header/: test.h
src/: CMakeLists.txt  main.c  test.c
